fix: carousel scroll bar, logo overlap | mkn

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,15 +19,12 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-  height: 100%;
 }
 
 body {
   color: $pds-theme-dark-primary;
   background: var(--app-background);
-  display: flex;
-  flex-direction: column;
+
 }
 
 a {
